<resources>
    <string name="app_name">JustDrink</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--toolbar-->
    <string name="weight_setting">Weight Setting</string>
    <string name="calendar">Calendar</string>
    <string name="reminder_setting">Reminder Setting</string>

    <!--menu/activity_main_drawer-->
    <string name="drinkwater">Drink water</string>
    <string name="drinklog">Drink log</string>
    <string name="drinkreport">Drink report</string>
    <string name="weightreport">Weight report</string>
    <string name="reminders">Reminders</string>
    <string name="nav_settings">Settings</string>
    <string name="about_app">About App</string>
    <!--
    <string name="widgets">Widgets</string>
    <string name="nav_share">Share</string>
    <string name="backup">Backup and Restore</string>
    -->

    <!--layout/fragment_drinkwater-->
    <string name="drink_target">DRINK TARGET</string>
    <string name="drinked">500</string>
    <string name="goal">/3000</string>

    <!-- 喝水圖表使用字串 -->
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="today">Today</string>
    <string name="weekly_average">Weekly average</string>
    <string name="weekly_Drink">Weekly Drinking water</string>
    <string name="monthly_average">Monthly average</string>
    <string name="monthly_Drink">Monthly Drinking water</string>
    <string name="year_average">Year average</string>
    <string name="year_Drink">Year Drinking water</string>
    <string name="no_data">No Data！</string>
    <string name="weight_now">Weight Now：</string>
    <string name="weight_avg">Weight Avg：</string>
    <string name="weight_min">Weight Min：</string>
    <string name="weight_max">Weight Max：</string>

    <!-- 對話框使用字串 -->
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="set_ok">Success！</string>
    <string name="reinput">Please input the right value！</string>
    <string name="total">Total：</string>
    <string name="ml">  ml</string>
    <string name="cold">Cold</string>
    <string name="mild">Mild</string>
    <string name="warm">Warm</string>
    <string name="hot">Hot</string>
    <string name="quiet">Quiet</string>
    <string name="normal">Normal</string>
    <string name="lively">Lively</string>
    <string name="verylively">Very Lively</string>
    <string name="weight_hander_text">Please input your weight:</string>

    <!--layout/water_settings_list-->
    <string-array name="water_settings_array">
        <item>Settings...</item>
        <item>Weight</item>
        <item>Adjustment</item>
        <item>Weather</item>
        <item>Sports</item>
        <item>Total</item>
    </string-array>

    <!--設定區fragment_setting-->
    <string-array name="setting" >
        <item>Reminder</item>
        <item>Cup Size</item>
        <item>Weight &amp; Goal</item>
        <item>Units &amp; Format</item>
    </string-array>

    <!-- 設定區fragment_settingadapter字串 -->
    <string name="accept">Accept</string>
    <string name="alarmsetting">AlarmSet</string>

    <!--設定Fragment內的RecyclView物件-->
    <string-array name="alarm">
        <item name="A">Time Alarm setting</item>
        <item name="B">Service</item>
        <item name="C">MusicSetting</item>
        <item name="D">NoVoice</item>
    </string-array>
    <string name="remove_alarm">RemoveAlarm</string>
    <string-array name="music">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="time">
        <item>15mins</item>
        <item>30mins</item>
        <item>1hour</item>
    </string-array>
    <string name="voiceTitle">選擇模式</string>
    <string-array name= "voiceSetting">
        <item>normal</item>
        <item>Vibrate</item>
        <item>Mute</item>
    </string-array>

    <!--關於App AboutApp字串 -->
    <string name="about_message1">【About App】</string>
    <string name="about_message2">70% of the body is made up of water. Drinking water not only promotes metabolism, enhances resistance, but also makes the cardiovascular healthier, so please remember to drink enough water every day to keep your health! Thank you for your download!</string>

</resources>
