<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:height="55dp"
        android:layout_gravity="center" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <android.support.design.widget.TabItem
            android:text="@string/week"
            android:padding="10dp"
            android:paddingTop="55dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TabItem
            android:text="@string/month"
            android:padding="10dp"
            android:paddingTop="55dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.design.widget.TabItem
            android:text="@string/year"
            android:padding="10dp"
            android:paddingTop="55dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
