<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@color/white"
    android:columnCount="4"
    android:orientation="vertical"
    android:rowCount="8">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/dialog_tite"
            android:layout_width="wrap_content"
            android:layout_height="69dp"
            android:layout_column="0"
            android:layout_row="0"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/weight_hander_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            android:layout_columnSpan="4"
            android:layout_weight="0.49" />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="132dp">

        <EditText
            android:id="@+id/weight"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_row="0"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/weight_hander_text"
            android:inputType="number"
            android:padding="@dimen/activity_vertical_margin"
            android:textColor="#FFFFFF"
            android:textCursorDrawable="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="0"
            android:padding="@dimen/activity_vertical_margin"
            android:text="Kg"
            android:textSize="25dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/ok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="2"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_ripple"
            android:text="@string/ok"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/cancel"
            android:background="@drawable/button_ripple"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="2"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary" />
    </GridLayout>

</GridLayout>
